<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data class=".LoginActivityBinding">
        <variable
            name="loginName"
            type="String"/>
        <variable
            name="password"
            type="String" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvLoginName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_activity_login_loginName" />

        <EditText
            android:id="@+id/etLoginName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLoginName"
            android:text="@={loginName}"/>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_activity_login_password"
            android:layout_below="@+id/etLoginName" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@+id/tvPassword"
            android:text="@={password}"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_activity_login_loginButton"
            android:layout_below="@+id/etPassword"
            android:onClick="onLoginClick"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_activity_login_registerButton"
            android:layout_below="@+id/btnLogin"
            android:onClick="onRegisterClick"/>

    </RelativeLayout>

</layout>